implement datasources which can fetch local and remote data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ chunkdownloader.hxx
 chunkdownloader.cxx
 datareader.hxx
 datareader.cxx
+datasource.hxx
+datasource.cxx
 downloader.cxx
 downloader.hxx
 driver.hxx
