add density filter for plasma sheet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ option(DEBUG_METADATA_ACTIONS "Log metadata-related actions" OFF)
 option(DEBUG_DOWNLOADING_ACTIONS "Log downloader actions" OFF)
 option(DEBUG_ARCHIVE_EXTRACTING "Log archive extraction" OFF)
 option(USE_BOOST_REGEX "Use regex library from boost (std::) otherwise" OFF)
+option(USE_HIA_DENSITY "Use HIA instrument for H1 density in plasmasheet filter, otherwiese use CODIF" OFF)
 
 option(DEBUG_ALL OFF "Turn on all the DEBUG_ options")
 if (DEBUG_ALL)
