Replace Boost::posix_time with custom CDF_EPOCH based datetime class
Since all the dates we read from files are CDF_EPOCH, there is no need to use Boost class,
while additionally complicates debugging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ cdfreader.cxx
 commonDefinitions.hxx
 chunkdownloader.hxx
 chunkdownloader.cxx
+csatime.hxx
+csatime.cxx
 datareader.hxx
 datareader.cxx
 datasource.hxx
@@ -91,7 +93,6 @@ target_link_libraries(cdownload
 		Boost::log
 		CDF::CDF
 	PUBLIC
-		Boost::date_time
 		Boost::filesystem
 		Boost::system
 		jsoncpp_lib
