Add optional per-cell logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ endif()
 option(DEBUG_METADATA_ACTIONS "Log metadata-related actions" OFF)
 option(DEBUG_DOWNLOADING_ACTIONS "Log downloader actions" OFF)
 option(DEBUG_ARCHIVE_EXTRACTING "Log archive extraction" OFF)
+option(DEBUG_LOG_EVERY_CELL "Log every cell times" OFF)
 option(USE_BOOST_REGEX "Use regex library from boost (std::) otherwise" OFF)
 option(USE_HIA_DENSITY "Use HIA instrument for H1 density in plasmasheet filter, otherwiese use CODIF" OFF)
 
@@ -115,6 +116,7 @@ if (DEBUG_ALL)
 	set(DEBUG_METADATA_ACTIONS ON)
 	set(DEBUG_DOWNLOADING_ACTIONS ON)
 	set(DEBUG_ARCHIVE_EXTRACTING ON)
+	set(DEBUG_LOG_EVERY_CELL ON)
 endif(DEBUG_ALL)
 
 configure_file(config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)
