Move compile-time filter parameters to run-time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,10 @@ filters/plasmasheet.hxx
 filters/plasmasheet.cxx
 filters/baddata.hxx
 filters/baddata.cxx
+filters/density.hxx
+filters/density.cxx
+filters/nightside.hxx
+filters/nightside.cxx
 filters/quality.hxx
 filters/quality.cxx
 writers/ASCIIWriter.hxx
@@ -108,8 +112,7 @@ option(DEBUG_METADATA_ACTIONS "Log metadata-related actions" OFF)
 option(DEBUG_DOWNLOADING_ACTIONS "Log downloader actions" OFF)
 option(DEBUG_ARCHIVE_EXTRACTING "Log archive extraction" OFF)
 option(DEBUG_LOG_EVERY_CELL "Log every cell times" OFF)
-option(USE_BOOST_REGEX "Use regex library from boost (std::) otherwise" OFF)
-option(USE_HIA_DENSITY "Use HIA instrument for H1 density in plasmasheet filter, otherwiese use CODIF" OFF)
+option(USE_BOOST_REGEX "Use regex library from boost (std:: otherwise)" OFF)
 
 option(DEBUG_ALL OFF "Turn on all the DEBUG_ options")
 if (DEBUG_ALL)
