install csa-async-donwload-url tool

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_executable(async-donwload-url async_download_url.cxx)
-target_link_libraries(async-donwload-url cdownload)
+add_executable(csa-async-donwload-url async_download_url.cxx)
+target_link_libraries(csa-async-donwload-url cdownload)
+install(TARGETS csa-async-donwload-url DESTINATION bin)
+
 
